Бассейн/shcool21-master/shcool21-master/Day05/ex04/compiling_error.txt
/Users/jjerde/Day05/ex04/ft_strncpy.c:15:2: error: declaration does not declare anything [-Werror,-Wmissing-declarations]
        int;
        ^~~
/Users/jjerde/Day05/ex04/ft_strncpy.c:17:2: error: use of undeclared identifier 'i'
        i = 0;
        ^
/Users/jjerde/Day05/ex04/ft_strncpy.c:18:9: error: use of undeclared identifier 'i'
        while (i < n)
               ^
/Users/jjerde/Day05/ex04/ft_strncpy.c:20:11: error: use of undeclared identifier 'i'
                if (src[i])
                        ^
/Users/jjerde/Day05/ex04/ft_strncpy.c:21:9: error: use of undeclared identifier 'i'
                        dest[i] = src[i];
                             ^
/Users/jjerde/Day05/ex04/ft_strncpy.c:21:18: error: use of undeclared identifier 'i'
                        dest[i] = src[i];
                                      ^
/Users/jjerde/Day05/ex04/ft_strncpy.c:23:9: error: use of undeclared identifier 'i'
                        dest[i] = '\0';
                             ^
/Users/jjerde/Day05/ex04/ft_strncpy.c:24:3: error: use of undeclared identifier 'i'
                i++;
                ^
/Users/jjerde/Day05/ex04/ft_strncpy.c:26:7: error: use of undeclared identifier 'i'
        dest[i] = '\0';
             ^
9 errors generated.
